--- a/design/css/style.css
+++ b/design/css/style.css
@@ -38,6 +38,7 @@ html {
 }
 
 /* main css here ***/
+.BgGrey{background:#ddd;}
 .nav-link {
     padding: 0.2rem 1.5rem;
 }
@@ -277,7 +278,8 @@ background-color:#ffea00 !important;
     background: #cccccc;
 }
 
-header .animateHead > a{color:#ffffff;font-size:26px;}
+header .animateHead > a{color:#ffffff;font-size:21px;}
+.deptBtn{margin-right:20px;}
 header h1{margin-top:15px;}
 header h1 a{font-weight:500;}
 .footer_logo  img{max-width:180px;padding: 20px;border: 1px solid #444444;}
@@ -298,11 +300,48 @@ header h1 a{font-weight:500;}
   border-radius: 4px;
 }
 .load_wrap{    background: #ddd;}
-.imgWrap1{max-width:40%;margin-top:10%;}
-.btm_text{display: inline-block;width:100%;text-align: center;font-size:30px;margin-bottom:20px;}
+.imgWrap1{max-width:15%;margin-top:10%;}
+.btm_text{display: inline-block;width:100%;text-align: center;font-size:24px;margin-bottom:20px;}
 .blinking{
     animation:blinkingText 1.2s infinite;
 }
+.statesNav .list-group-item{background:transparent;padding:5px;border: none;}
+.statesNav .list-group{padding: 0 15px;}
+.photo_wrap span{font-size: 17px;
+    font-weight: 500;
+    margin-bottom: 5px;
+    display: inline-block;
+    width: 100%;}
+.photo_wrap{display: inline-block;}
+
+.popOver {
+    width: 100%;
+    position: relative;
+    -webkit-animation: bummer 5s;
+    animation: bummer 5s;
+    -webkit-transform: scale(0,0); 
+    transform: scale(0,0);
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+.Inn_wrap{display: inline-block;    max-width: 130px;}
+.Inn_wrap span{display: inline-block;width:100%;margin-top:10px;}
+.Inn_wrap img{border-radius:100px;    max-width:95px;border: 2px solid #363636;}
+.state_Loc_wrap{display:flex;width:100%;text-align: center;}
+.Inn_wrap:hover span{text-decoration: underline;cursor: pointer;}
+.Inn_wrap:hover img{border: 2px solid #ffea00;}
+@-webkit-keyframes bummer {
+    100% {
+        -webkit-transform: scale(1,1); 
+    }
+}
+
+@keyframes bummer {
+    100% {
+        transform: scale(1,1); 
+    }
+}
+
 @keyframes blinkingText{
     0%{     color: #000;    }
     49%{    color: #000; }
@@ -317,3 +356,37 @@ header h1 a{font-weight:500;}
 .Member_labels{margin:10px 0;}
 .member .imgWrap1{max-width: 30%;margin-top: 5%;}
 .member .find-location{    padding: 30px 25px;}
+.Reg_link{display: inline-block;width:100%;margin:10px 0;}
+.depart_left_wrap{background: #ffea00;height:100%;margin-top:20px;}
+.depart_left_wrap .imgWrap1{padding:170px 0;}
+.depart_right_wrap{margin-top:150px;}
+ .depart_right_wrap .btm_text{font-size: 34px;}
+ .contactUs{padding:200px 0 50px 0;}
+ .GallryWrap{padding:200px 0 50px 0;}
+ .GallryWrap .nav-pills .nav-link{padding:10px 20px;margin-bottom:5px;}
+ .contactUs h2{display: inline-block;width:100%;text-align: center;margin-bottom:50px;}
+.tab-content .tab-pane{background:transparent !important;}
+.videotab .embed-responsive{margin-bottom:20px;}
+ .gal {
+  
+  
+  -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+    
+  
+  } 
+  .gal img{ width: 100%; padding: 7px 0;}
+@media (max-width: 500px) {
+    
+    .gal {
+  
+  
+  -webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+    
+  
+  }
+    
+  }
