--- a/design/css/style.css
+++ b/design/css/style.css
@@ -166,7 +166,6 @@ header{background-color:#363636;position: fixed;top: 0;z-index:20;width: 100%;/*
 /* Slideshow container */
 .slideshow-container {
   position: relative;
-  background: #f1f1f1f1;
   padding:80px 0 20px 0;
 }
 
@@ -208,7 +207,6 @@ header{background-color:#363636;position: fixed;top: 0;z-index:20;width: 100%;/*
 .dot-container {
     text-align: center;
     padding:20px 0 80px 0;
-    background: #f1f1f1f1;
 }
 
 /* The dots/bullets/indicators */
@@ -233,7 +231,8 @@ q {font-style: italic;}
 
 /* Add a blue color to the author */
 .author {color: cornflowerblue;}
-.testimo img{border-radius: 30px;    margin-bottom: 25px;}
+.testimo img{border-radius:70px;    margin-bottom: 25px;}
+.testi-textCenter{}
 .roadsafety{padding:95px 0;background:url("../images/bg-faq.jpg");background-position: bottom;background-repeat: no-repeat;background-color: #f7f8fc;}
 footer{background-color:#000000;background: url("../images/road-texture.jpg");background-size: 55%;min-height:200px;    padding:70px 0;}
 footer img{max-width:100%;}
@@ -251,6 +250,12 @@ footer span{color:#ffffff;margin-left: 27px;
     transform: rotate(-90deg);
 }
 .ministers_wrap{padding:80px 0;background:#ddd;}
+.testimonials{background:#000000;}
+
+.testimonials .mySlides > p{color:#ffffff;}
+.testi-textCenter{max-width: 1020px;
+    margin: 0 auto;margin-bottom: 20px;}
+.error_alert p{color:red;padding: 5px 0px 0px 15px;}
 .ministers_wrap h4{font-size:20px;}
 .ministers_wrap .card{    min-height: 576px;background:#f1f1f1f1;}
 .logo-wrp img{max-width:80px;}
@@ -352,7 +357,7 @@ header h1 a{font-weight:500;}
     100%{   color: #000;    }
 }
 
-.find-location .lableTxt{line-height: 37px;}
+.find-location .lableTxt{line-height: 37px;text-align: left;}
 .find-location .state_select{margin-top:0;border: 1px solid #ced4da;}
 .find-location .custom-file-label{text-align: left;}
 .Member_labels{margin:10px 0;}
@@ -378,6 +383,9 @@ header h1 a{font-weight:500;}
     
   
   } 
+  @media (min-width:1200px){
+    .ministers_wrap .card .card-body{min-height: 460px;}
+  }
   .gal img{ width: 100%; padding: 7px 0;}
 @media (max-width: 500px) {
     
