bg changes and some issues updated
bg changes and some issues updated

--- a/design/css/style.css
+++ b/design/css/style.css
@@ -250,7 +250,10 @@ footer span{color:#ffffff;margin-left: 27px;
     transform: rotate(-90deg);
 }
 .ministers_wrap{padding:80px 0;background:#ddd;}
-.testimonials{background:#000000;}
+.testimonials{background:url("../images/slide1.jpg");background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;background-size: 100%;background-position: bottom;}
 
 .testimonials .mySlides > p{color:#ffffff;}
 .testi-textCenter{max-width: 1020px;
