--- a/design/css/style.css
+++ b/design/css/style.css
@@ -106,7 +106,7 @@ html {
 .abt_wrap{background: #000000; /*   background: #001a33 url("../images/pattern-blue.jpg") 0 0; */   padding:70px 0;}
 .abt_wrap .form__title{color:#ffffff;margin-bottom: 50px;}
 .abt_wrap .form__mark{color:#000000}
-header{background-color:#363636;position: fixed;top: 0;z-index:20;width: 100%;/*background: rgba(255, 234, 0,0.9);*/background: url("../images/road-texture.jpg");background-size: 50%;}
+header{background-color:#363636;position: fixed;top: 0;z-index:20;width: 100%;/*background: rgba(255, 234, 0,0.9);*/background: url("../images/road-texture.jpg");background-size:6%;}
 .btn-primary{background:#ffea00; color:#000000;   border-color: #000000;}
 .nav-pills .nav-link{color:#000000;}
 .nav-pills .nav-link:hover{background: #000000;
@@ -122,6 +122,10 @@ header{background-color:#363636;position: fixed;top: 0;z-index:20;width: 100%;/*
     /*background: #001a33 url(../images/pattern-blue.jpg) 0 0;*/
     /*background:#ffffff;*/
 }
+.foot-soc-links ul li{list-style-type: none;}
+.foot-soc-links ul{padding-left:25px;}
+.foot-soc-links ul li .fa{margin-right:10px;}
+.foot-soc-links ul li .fa:before{font-size:20px;}
 .numbers__value {
     font-family: Montserrat;
     font-size: 38px;
@@ -234,7 +238,7 @@ q {font-style: italic;}
 .testimo img{border-radius:70px;    margin-bottom: 25px;}
 .testi-textCenter{}
 .roadsafety{padding:95px 0;background:url("../images/bg-faq.jpg");background-position: bottom;background-repeat: no-repeat;background-color: #f7f8fc;}
-footer{background-color:#000000;background: url("../images/road-texture.jpg");background-size: 55%;min-height:200px;    padding:70px 0;}
+footer{background-color:#000000;background: url("../images/road-texture.jpg");background-size:6%;min-height:200px;    padding:70px 0;}
 footer img{max-width:100%;}
 footer h3{color:#ffffff;margin-left:25px;margin-top: 22px;}
 footer ul li{color:#ffffff}
@@ -250,7 +254,7 @@ footer span{color:#ffffff;margin-left: 27px;
     transform: rotate(-90deg);
 }
 .ministers_wrap{padding:80px 0;background:#ddd;}
-.testimonials{background:url("../images/slide1.jpg");background-attachment: fixed;
+.testimonials{background-color:#000000;background:url("../images/slide1.jpg");background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;background-size: 100%;background-position: bottom;}
