--- a/design/css/dashboard.css
+++ b/design/css/dashboard.css
@@ -10129,7 +10129,8 @@ a:focus {
   height: 2rem;
   width: 2rem;
 }
-
+#accordionSidebar li a{padding:15px 20px;}
+#accordionSidebar  .sidebar-divider{display: none !important;}
 .topbar {
   height: 4.375rem;
 }
@@ -10412,7 +10413,7 @@ a:focus {
 }
 
 .sidebar .sidebar-brand {
-  height: 4.375rem;
+  height: 7.375rem;
   text-decoration: none;
   font-size: 1rem;
   font-weight: 800;
